2015-10-19  Ola Jeppsson  <ola@adapteva.com>

	* fabs64.cgs: New test.
	* fadd64.cgs: New test.
	* fmadd64.cgs: New test.
	* fmax64.cgs: New test.
	* fmsub64.cgs: New test.
	* fmul64.cgs: New test.
	* fsub64.cgs: New test.

2015-10-19  Ola Jeppsson  <ola@adapteva.com>

	* allinsn.exp: Separate cgen instruction unit tests and CPU
	behaviour tests by file extension.
	* hwloops.s: Renamed from hwloops.cgs
	* syscalls.s: Renamed from syscalls.cgs

2015-10-13  Ola Jeppsson  <ola@adapteva.com>

	* fadd-simd.cgs: New test.
	* fmadd-simd.cgs: New test.
	* fmsub-simd.cgs: New test.
	* fmul-simd.cgs: New test.
	* fsub-simd.cgs: New test.

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* mode.cgs: New test.

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* float.cgs: Add real test instead of accidental symlink.

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* fmax.cgs: New test.

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* pushpop.cgs: Remove.

2015-10-08  Ola Jeppsson  <ola@adapteva.com>

	* fabs.cgs: New test.
	* fix.cgs: New test.
	* float.cgs: New test.
	* iadd.cgs: New test.

2015-10-05  Ola Jeppsson  <ola@adapteva.com>

	* hwloops.cgs: Calculate pc-relative addresses for ls and le.

2015-10-05  Ola Jeppsson  <ola@adapteva.com>

	* allinsn.exp: Allow baseboard to set ldflags for the simulator
	testsuite via sim,ldflags

2015-10-02  Ola Jeppsson  <ola@adapteva.com>

	* and64.cgs: New test.

2015-10-02  Ola Jeppsson  <ola@adapteva.com>

	* add64.cgs: New test.
	* asr64.cgs: New test.
	* eor64.cgs: New test.
	* lsl64.cgs: New test.
	* lsr64.cgs: New test.
	* orr64.cgs: New test.
	* sub64.cgs: New test.

2015-10-01  Ola Jeppsson  <ola@adapteva.com>

	* hwloops.cgs: New test.

2015-10-01  Ola Jeppsson  <ola@adapteva.com>

	* bkpt.cgs: bkpt stops the program with
	signal 5 (bkpt, trap).
	* idle.cgs: Disable test.
	* ldrdp16.cgs: Fix alignment.
	* ldrx.cgs: Fix 32-bit mov.
	* ldrx16.cgs: Likewise.
	* movfs16.cgs: Only compare nbit.